[package]
name = "B-Mine-Server"
version = "0.1.0"
edition = "2021"

[dependencies]
B-Mine-SDK= {path="../B-Mine-SDK"}
# 日志
log = "0.4.22"
env_logger = "0.11.4"
# 异步
tokio = { version = "1", features = ["full"] }
# 时间
chrono = "0.4.38"
# 协议库
byteorder = "1.5.0"
rust-raknet = "0.12.0"

# 解析
serde_yaml = "0.9.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.88"
tracing = "0.1.40"
tracing-subscriber =  { version = "0.3.18", features = ["fmt", "std"]}
tracing-appender = "0.2.3"
tracing-log = "0.2.0"
colored = "2.1.0"
libloading = "0.8.5"
